--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "sequelize": "^6.37.3"
   }
